# VehicleDetection-Python

./: .gitattributes  .gitignore  README.md  blob.py  globplot.py  motdet.py  nocv.py  setup.cfg  vehdet.py
vehicledetection/: __init__.py
