[metadata]
name = vehicledetection
version = 0.5.0
author = Michael Hirsch, Ph.D.
author_email = scivision@users.noreply.github.com
url = https://github.com/scivision/vehicledetection
description = Demo OpenCV vehicle detection
keywords =
  computer vision
  OpenCV
classifiers =
  Development Status :: 4 - Beta
  Environment :: Console
  Intended Audience :: Science/Research
  Operating System :: OS Independent
  Programming Language :: Python :: 3.5
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Topic :: Scientific/Engineering :: Visualization
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.5
include_package_data = True
packages = find:
install_requires =

[options.extras_require]
tests =
  pytest
  pytest-cov
  flake8
  mypy
